fix: Undo and redo should work correctly now